# learn_opengl

./: .gitignore  CMakeLists.txt
glad/: glad.c
headers/: Shader.hpp  glad.h
lib/glfw-3.4/: CMakeLists.txt
shaders/: default.frag  default.vert
src/: main.cpp
